[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/battle/TurnPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/battle/BorderedTurnPanel.gd" type="Script" id=2]

[node name="BorderedTurnPanel" type="ReferenceRect"]
margin_right = 30.0
margin_bottom = 36.0
rect_min_size = Vector2( 30, 36 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 27.0
margin_bottom = 27.0
scroll_vertical_enabled = false

[node name="TurnPanel" parent="CenterContainer/PanelContainer/ScrollContainer" instance=ExtResource( 1 )]

[node name="Tween" type="Tween" parent="."]

[connection signal="resized" from="." to="." method="_on_BorderedTurnPanel_resized"]
[connection signal="minimum_size_changed" from="CenterContainer/PanelContainer/ScrollContainer/TurnPanel" to="." method="_on_TurnPanel_minimum_size_changed"]
[connection signal="other_actor_cleared" from="CenterContainer/PanelContainer/ScrollContainer/TurnPanel" to="." method="_on_TurnPanel_other_actor_cleared"]
[connection signal="turn_advanced" from="CenterContainer/PanelContainer/ScrollContainer/TurnPanel" to="." method="_on_TurnPanel_turn_advanced"]
